chore: Decrease wave z-index to avoid overlapping

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -88,7 +88,7 @@ body {
   opacity: 0.8;
   bottom: 0;
   left: 0;
-  z-index: -1;
+  z-index: -10;
 }
 
 .wave:nth-of-type(2) {
